fix update popup spacing

--- a/src/components/inputs/editTodo.css
+++ b/src/components/inputs/editTodo.css
@@ -48,8 +48,13 @@
   width: 100%;
 }
 
+#editDate {
+  margin-left: 5px;
+}
+
 #editAccept {
   margin-left: auto;
+  margin-right: 10px;
 }
 
 .newInputs {
